--- a/starter-code/html pages/index.html
+++ b/starter-code/html pages/index.html
@@ -1,60 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;1,100&family=Racing+Sans+One&family=Scheherazade+New:wght@400;700&display=swap"
+    rel="stylesheet">
+
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
+
 <body>
   Our Company
   Locations
   Contact
-  
+
   Award-winning custom designs and digital branding solutions
 
-  With over 10 years in the industry, we are experienced in creating fully responsive websites, app design, 
+  With over 10 years in the industry, we are experienced in creating fully responsive websites, app design,
   and engaging brand experiences. Find out more about our services.
-  
+
   Learn more
-  
+
   Web Design
   View Projects
-  
+
   App Design
   View Projects
-  
+
   Graphic Design
   View Projects
-  
+
   Passionate
   Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge
   art, design, and technology into exciting new solutions.
-  
+
   Resourceful
   Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer
   collaboration. It guarantees superior results that fulfill our clients’ needs.
-  
+
   Friendly
   We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we
   strive to give them the best experience a company can provide.
-  
+
   Let’s talk about your project
   Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
   Get in touch
-  
+
   Our company
   Locations
   Contact
-  
+
   Designo Central Office
   3886 Wellington Street
   Toronto, Ontario M9C 3J5
-  
+
   Contact Us (Central Office)
   P : +1 253-863-8967
   M : contact@designo.co
 </body>
+
 </html>
