--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -11,33 +11,32 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible&family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Jost:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Outfit:wght@100;200;300;400;500;600;700;800;900&family=Poppins:ital,wght@0,100;0,200;1,100&family=Racing+Sans+One&family=Scheherazade+New:wght@400;700&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="../css pages/graphic-design.css">  
 
   <title>Frontend Mentor | Designo Agency Website Challenge</title>
 </head>
 
 <body>
-  Our Company
-  Locations
-  Contact
 
-  Graphic design
-  We deliver eye-catching branding materials that are tailored to meet your business objectives.
+  <main class="page">
 
-  Tim Brown
-  A book cover designed for Tim Brown’s new release, ‘Change’
+ <nav class="navbar"></nav>
 
-  Boxed water
-  A simple packaging concept made for Boxed Water
+  <section class="Main-content">
+    <div class="intro">
+    <h1> Graphic design </h1>
+   <p> We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
+   </div>
+</section>
 
-  Science!
-  A poster made in collaboration with the Federal Art Project
+ <section class="Second-content">
+  <div class="container"></div>
+</section>
 
-  App Design
-  View Projects
 
-  Web Design
-  View Projects
-
+<section class="third-content">
+  <div class="Designs"></div>
+</section>
   Let’s talk about your project
   Ready to take it to the next level? Contact us today and find out how our expertise can
   help your business grow.
@@ -54,6 +53,10 @@
   Contact Us (Central Office)
   P : +1 253-863-8967
   M : contact@designo.co
+
+
+</main>
+<script src="/starter-code/js/graphic-design.js"></script>
 </body>
 
 </html>
