added the first section

--- a/starter-code/html pages/index.html
+++ b/starter-code/html pages/index.html
@@ -39,7 +39,7 @@
      </div>
      
       <div class="element">
-        <img class="action" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
+        <!-- <img class="action" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt=""> -->
       </div>
       <button class="get-touch">GET IN TOUCH</button>
     </section>
