--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -20,7 +20,18 @@
 
   <main class="page">
 
- <nav class="navbar"></nav>
+    <header>
+      <nav>
+      <div class="logo">
+        <a href="./index.html" >  <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo"> </a>
+      </div>
+      <div class="links">
+        <a href="./index.html" >OUR COMPANY</a>
+        <a href="./index.html" >LOCATIONS</a>
+        <a href="./index.html" >CONATCT</a>
+      </div>
+    </nav>
+    </header>
 
   <section class="Main-content">
     <div class="intro">
@@ -37,22 +48,56 @@
 <section class="third-content">
   <div class="Designs"></div>
 </section>
-  Let’s talk about your project
-  Ready to take it to the next level? Contact us today and find out how our expertise can
-  help your business grow.
-  Get in touch
 
-  Our company
-  Locations
-  Contact
+<section class="project-container">
+  <div class="project">
+   <h1>Let’s talk about your project</h1>
+   <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
+   </h2>
+  </div>
+  
+   <div class="element">
+     <img class="action" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
+   </div>
+   <button class="get-touch">GET IN TOUCH</button>
+ </section>
 
-  Designo Central Office
-  3886 Wellington Street
-  Toronto, Ontario M9C 3J5
-
-  Contact Us (Central Office)
-  P : +1 253-863-8967
-  M : contact@designo.co
+ <footer>
+   <section class="foot">
+    <nav >
+     <div class="logo">
+       <a href="http://"> <img src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
+     </div>
+     <div class="links link">
+       <a href="./index.html" >OUR COMPANY</a>
+       <a href="./index.html" >LOCATIONS</a>
+       <a href="./index.html" >CONTACT</a>
+     </div>
+    </nav>
+    <hr>
+    <div class="container1">
+     <div class="container-direction">
+       <h1>Designo Central Office</h1>
+       <h2> 3886 Wellington Street</h2>
+       <h2>Toronto, Ontario M9C 3J5</h2>
+     </div>
+     <div class="container-contact">
+       <h1>Contact Us (Central Office)</h1>
+       <h2>P : +1 253-863-8967</h2>
+       <h2>M : contact@designo.co</h2>
+     </div>
+  
+     <div class="footer-icons">
+       <img src="/starter-code/assets/shared/desktop/icon-facebook.svg" alt="facebook">
+       <img src="/starter-code/assets/shared/desktop/icon-youtube.svg" alt="youtube">
+       <img src="/starter-code/assets/shared/desktop/icon-twitter.svg" alt="twitter">
+       <img src="/starter-code/assets/shared/desktop/icon-pinterest.svg" alt="pinterest">
+       <img src="/starter-code/assets/shared/desktop/icon-instagram.svg" alt="instagram">
+     </div>
+    </div>
+   </div>
+ </section>
+ </footer>
 
 
 </main>
