--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -46,9 +46,8 @@
       <img src="/starter-code/assets/shared/desktop/bg-pattern-leaf.svg" alt="leaf">
     </section>
 
-    <section class="grid-container">
-      
-    </section>
+    <div id="grid-container" class="grid-container">
+    </div>
 
     
     Web design
