--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -39,7 +39,9 @@
    <p> We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
    </div>
 </section>
-
+  <section class="bg-svg">
+    <img src="../assets/home/desktop/bg-pattern-hero-home.svg" alt="home">
+  </section>
  <section class="Second-content">
   <div class="container"></div>
 </section>
