--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -52,16 +52,14 @@
 </section>
 
 <section class="project-container">
+  <div class="gig">
   <div class="project">
    <h1>Let’s talk about your project</h1>
    <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
    </h2>
   </div>
-  
-   <div class="element">
-     <img class="action" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
-   </div>
    <button class="get-touch">GET IN TOUCH</button>
+  </div>
  </section>
 
  <footer>
