--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -50,6 +50,67 @@
       </div>
     </div>
   </section>
+
+
+
+  <div class="grid-container">
+    <div class="grid-item first-element">
+          <div class="content">
+            <div class="first">
+              <h1>web design</h1>
+            </div>
+            <div class="second">
+              <h6>view projects</h6>
+            </div>
+          </div>
+    </div>
+    <div class="grid-item second-element">
+        <div class="content2">
+          <div class="heading">
+            <h1>app design</h1>
+          </div>
+          <div class="text">
+            <h6>view projects</h6>
+          </div>
+        </div>
+    </div>
+    <div class="grid-item third-element">
+      <div class="content3">
+        <div class="heading1">
+          <h1>Graphic design</h1>
+        </div>
+        <div class="text1">
+          <h6>view projects</h6>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <section class="third section">
+   <div class="hero-section">
+      <div class="first-hero">
+        <img src="/starter-code/assets/home/desktop/illustration-passionate.svg" alt="passionate">
+        <div class="first-hero-text">
+       <h1>passionate</h1>
+       <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge art, design, and technology into exciting new solutions.</p>
+        </div>
+      </div>
+   </div>
+
+
+  </section>
+
+
+
+
+
+
+
+
+
+
+
   <section class="project-container">
     <div class="project">
      <h1>Let’s talk about your project</h1>
@@ -98,6 +159,8 @@
       </div>
      </div>
    </section>
+
+
    </footer>
 </body>
 
