working on grid

--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -42,34 +42,75 @@
         </div>
     </secttion>
 
-    <section class="leaf">
+    <div class="leaf">
       <img src="/starter-code/assets/shared/desktop/bg-pattern-leaf.svg" alt="leaf">
-    </section>
-
-    <div id="grid-container" class="grid-container">
     </div>
 
-    
-    Web design
-    We build websites that serve as powerful marketing tools and bring memorable brand experiences.
-  
-    Express
-    A multi-carrier shipping website for ecommerce businesses
-  
-    Transfer
-    Site for low-cost money transfers and sending money within seconds
-  
-    Photon
-    A state-of-the-art music player with high-resolution audio and DSP effects
-  
-    Builder
-    Connects users with local contractors based on their location
-  
-    Blogr
-    Blogr is a platform for creating an online blog or publication
-  
-    Camp
-    Get expert training in coding, data, design, and digital marketing
+   <section class="grid-content">
+    <div class="grid-container">
+      <div class="grid-item">
+        <div class="svg-container">
+          <img  src ="/starter-code/assets/web-design/desktop/image-express.jpg" alt="express">
+        </div>
+        <div class="express">
+          <h1>EXPRESS</h1>
+          <h2>A multi-carrier shipping website for ecommerce businesses</h2>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="svg-container">
+         <img src="/starter-code/assets/web-design/desktop/image-transfer.jpg" alt="transfer">
+        </div>
+        <div class="express">
+          <h1>TRANSFER</h1>
+          <h2>Site for low-cost money transfers and sending money within seconds</h2>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="svg-container">
+         <img src="/starter-code/assets/web-design/desktop/image-photon.jpg" alt="photon">
+        </div>
+        <div class="express">
+          <h1>PHOTON</h1>
+          <h2>A state-of-the-art music player with high-resolution audio and DSP effects</h2>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="svg-container">
+          <img src="/starter-code/assets/web-design/desktop/image-builder.jpg" alt="builder">
+        </div>
+        <div class="express">
+          <h1>BUILDER</h1>
+          <h2>Connects users with local contractors based on their location</h2>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="svg-container">
+          <img src="/starter-code/assets/web-design/desktop/image-blogr.jpg" alt="blogr">
+        </div>
+        <div class="express">
+          <h1>BLOGR</h1>
+          <h2>Blogr is a platform for creating an online blog or publication</h2>
+        </div>
+      </div>
+      <div class="grid-item">
+        <div class="svg-container">
+         <img src="/starter-code/assets/web-design/desktop/image-camp.jpg" alt="camp">
+        </div>
+        <div class="express">
+          <h1>CAMP</h1>
+          <h2>Get expert training in coding, data, design, and digital marketing</h2>
+        </div>
+      </div>
+       </div>
+   </section>
+
+   <section>
+    <div>
+      <div></div>
+      <div></div>
+    </div>
+   </section>
   
     App Design
     View Projects
