done with the desktop

--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -88,15 +88,41 @@
 
 
   <section class="third section">
-   <div class="hero-section">
-      <div class="first-hero">
-        <img src="/starter-code/assets/home/desktop/illustration-passionate.svg" alt="passionate">
-        <div class="first-hero-text">
+     
+  <div class="hero">
+       <div class="hero-content">
+          <div class="hero-image">
+             <img src="/starter-code/assets/home/desktop/illustration-passionate.svg" alt="">
+          </div>
+
+          <div class="hero-text">
        <h1>passionate</h1>
        <p>Each project starts with an in-depth brand research to ensure we only create products that serve a purpose. We merge art, design, and technology into exciting new solutions.</p>
+          </div>
+       </div>
+       <div class="hero-content1">
+        <div class="hero-image1">
+           <img src="/starter-code/assets/home/desktop/illustration-resourceful.svg" alt="">
         </div>
+
+        <div class="hero-text1">
+     <h1>resourceful</h1>
+     <p>Everything that we do has a strategic purpose. We use an agile approach in all of our projects and value customer collaboration. It guarantees superior results that fulfill our clients’ needs.</p>
+        </div>
+     </div>
+     <div class="hero-content2">
+      <div class="hero-image2">
+         <img src="/starter-code/assets/home/desktop/illustration-friendly.svg" alt="">
+      </div>
+
+      <div class="hero-text2">
+   <h1>friendly</h1>
+   <p> We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we strive to give them the best experience a company can provide.</p>
       </div>
    </div>
+  </div>
+
+      
 
 
   </section>
