update done to the desktop

--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -122,6 +122,10 @@
    </div>
   </div>
 
+  <div class="side-leaf">
+    <img src="/starter-code/assets/shared/desktop/bg-pattern-leaf.svg" alt="leaf">
+  </div>
+
       
 
 
