working on grid item

--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -105,31 +105,35 @@
        </div>
    </section>
 
-   <section>
-    <div>
-      <div></div>
-      <div></div>
+
+   <section class="grid-container-container">
+    <div class="grid-content-container">
+      <div class="grid-item-container">
+       <div class="app">
+         <h3>App Design</h3>
+        <button>View Projects<span>></span></button>
+      </div>
+      </div>
+      <div class="grid-item-container-container">
+      <div class="app">
+        <h3>Graphic Design</h3>
+        <button>View Projects<span>></span></button>
+      </div>
+      </div>
     </div>
    </section>
   
-    App Design
-    View Projects
-  
-    Graphic Design
-    View Projects
 
     <section class="project-container">
-     <div class="project">
-      <h1>Let’s talk about your project</h1>
-      <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
-      </h2>
-     </div>
-     
-      <div class="element">
-        <img class="action" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
+      <div class="gig">
+      <div class="project">
+       <h1>Let’s talk about your project</h1>
+       <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
+       </h2>
       </div>
-      <button class="get-touch">GET IN TOUCH</button>
-    </section>
+       <button class="get-touch">GET IN TOUCH</button>
+      </div>
+     </section>
 
     <footer>
       <section class="foot">
