almost done with tablet

--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -47,6 +47,10 @@
          <div class="container-image">
           <img src="/starter-code/assets/home/desktop/image-hero-phone.png" alt="">
         </div>
+        <div class="pattern">
+          <img src="/starter-code/assets/home/desktop/bg-pattern-hero-home.svg" alt="">
+        </div>
+        
       </div>
     </div>
   </section>
