Added a js file and added new changes

--- a/starter-code/html pages/app-design.html
+++ b/starter-code/html pages/app-design.html
@@ -47,7 +47,42 @@
     </div>
 
     <section class="stuff" id="stuff">
-      
+      <div class="box">
+        <div class="innerbox">
+          <div class="in_img"></div>
+        </div>
+        <div class="words">
+          <h2>Airfilter</h2>
+        <p>Solving the problem of poor indoor air quality by filtering the air</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="innerbox">
+          <div class="in_img"></div>
+        </div>
+        <div class="words">
+          <h2>Airfilter</h2>
+        <p>Solving the problem of poor indoor air quality by filtering the air</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="innerbox">
+          <div class="in_img"></div>
+        </div>
+        <div class="words">
+          <h2>Airfilter</h2>
+        <p>Solving the problem of poor indoor air quality by filtering the air</p>
+        </div>
+      </div>
+      <div class="box">
+        <div class="innerbox">
+          <div class="in_img"></div>
+        </div>
+        <div class="words">
+          <h2>Airfilter</h2>
+        <p>Solving the problem of poor indoor air quality by filtering the air</p>
+        </div>
+      </div>
     </section>
     Airfilter
     Solving the problem of poor indoor air quality by filtering the air
@@ -70,18 +105,15 @@
     Graphic Design
     View Projects
     <section class="project-container">
+      <div class="gig">
       <div class="project">
-        <h1>Let’s talk about your project</h1>
-        <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business
-          grow.
-        </h2>
+       <h1>Let’s talk about your project</h1>
+       <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
+       </h2>
       </div>
-
-      <div class="element">
-        <img class="action" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
+       <button class="get-touch">GET IN TOUCH</button>
       </div>
-      <button class="get-touch">GET IN TOUCH</button>
-    </section>
+     </section>
 
     <footer>
       <section class="foot">
@@ -120,6 +152,7 @@
       </section>
     </footer>
   </main>
+  <script src="/starter-code/js/app-design.js"></script>
 </body>
 
 </html>
