--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -64,11 +64,12 @@
 
  <footer>
    <section class="foot">
+    <div class="foot1">
     <nav >
      <div class="logo">
        <a href="http://"> <img src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
      </div>
-     <div class="links link">
+     <div class="links-link">
        <a href="./index.html" >OUR COMPANY</a>
        <a href="./index.html" >LOCATIONS</a>
        <a href="./index.html" >CONTACT</a>
