--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -22,6 +22,9 @@
     <div class="logo">
       <a href="./index.html" >  <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo"> </a>
     </div>
+     <div class="side-nav">
+      <img src="/starter-code/assets/shared/mobile/icon-hamburger.svg" alt="close">
+     </div>
     <div class="links">
       <a href="./index.html" >OUR COMPANY</a>
       <a href="./index.html" >LOCATIONS</a>
@@ -58,7 +61,9 @@
 
 
   <div class="grid-container">
+    <div class="grid-content">
     <div class="grid-item first-element">
+           <div class="overlay"></div>
           <div class="content">
             <div class="first">
               <h1>web design</h1>
@@ -88,6 +93,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 
 
@@ -160,10 +166,11 @@
 
    <footer>
      <section class="foot">
+      <div class="foot1">
       <nav >
        <div class="logo">
          <a href="http://"> <img src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
-       </div>
+       </div> 
        <div class="links link">
          <a href="./index.html" >OUR COMPANY</a>
          <a href="./index.html" >LOCATIONS</a>
