working on tablet mode

--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -20,158 +20,172 @@
   <main>
     <header>
       <nav>
-      <div class="logo">
-        <a href="./index.html" >  <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo"> </a>
-      </div>
-      <div class="links">
-        <a href="./index.html" >OUR COMPANY</a>
-        <a href="./index.html" >LOCATIONS</a>
-        <a href="./index.html" >CONATCT</a>
-      </div>
-    </nav>
+        <div class="logo">
+          <a href="./index.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo">
+          </a>
+        </div>
+        <div class="links">
+          <a href="./index.html">OUR COMPANY</a>
+          <a href="./index.html">LOCATIONS</a>
+          <a href="./index.html">CONATCT</a>
+        </div>
+      </nav>
     </header>
 
     <secttion class="web_design">
       <div class="design">
         <h1>Web Design</h1>
-      <h2>We build websites that serve as powerful marketing tools 
-        and bring memorable brand experiences.</h2>
+        <h2>We build websites that serve as powerful marketing tools
+          and bring memorable brand experiences.</h2>
       </div>
-        <div class="element">
-          <img class="actions" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
-        </div>
+      <div class="element">
+        <img class="actions" src="/starter-code/assets/shared/desktop/bg-pattern-call-to-action.svg" alt="">
+      </div>
     </secttion>
 
     <div class="leaf">
       <img src="/starter-code/assets/shared/desktop/bg-pattern-leaf.svg" alt="leaf">
     </div>
 
-   <section class="grid-content">
-    <div class="grid-container">
-      <div class="grid-item">
-        <div class="svg-container">
-          <img  src ="/starter-code/assets/web-design/desktop/image-express.jpg" alt="express">
+    <section class="grid-content">
+      <div class="grid-container">
+        <div class="grid-item">
+          <div class="svg-container">
+            <img src="/starter-code/assets/web-design/desktop/image-express.jpg" alt="express">
+          </div>
+          <div class="express">
+          <div class="text">
+            <h1>EXPRESS</h1>
+            <h2>A multi-carrier shipping website for ecommerce businesses</h2>
+          </div>
+          </div>
         </div>
-        <div class="express">
-          <h1>EXPRESS</h1>
-          <h2>A multi-carrier shipping website for ecommerce businesses</h2>
+        <div class="grid-item">
+          <div class="svg-container">
+            <img src="/starter-code/assets/web-design/desktop/image-transfer.jpg" alt="transfer">
+          </div>
+          <div class="express">
+            <div class="text">
+              <h1>TRANSFER</h1>
+            <h2>Site for low-cost money transfers and sending money within seconds</h2>
+            </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="svg-container">
+            <img src="/starter-code/assets/web-design/desktop/image-photon.jpg" alt="photon">
+          </div>
+          <div class="express">
+           <div class="text">
+            <h1>PHOTON</h1>
+            <h2>A state-of-the-art music player with high-resolution audio and DSP effects</h2>
+           </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="svg-container">
+            <img src="/starter-code/assets/web-design/desktop/image-builder.jpg" alt="builder">
+          </div>
+          <div class="express">
+            <div class="text">
+              <h1>BUILDER</h1>
+            <h2>Connects users with local contractors based on their location</h2>
+            </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="svg-container">
+            <img src="/starter-code/assets/web-design/desktop/image-blogr.jpg" alt="blogr">
+          </div>
+          <div class="express">
+           <div class="text">
+            <h1>BLOGR</h1>
+            <h2>Blogr is a platform for creating an online blog or publication</h2>
+           </div>
+          </div>
+        </div>
+        <div class="grid-item">
+          <div class="svg-container">
+            <img src="/starter-code/assets/web-design/desktop/image-camp.jpg" alt="camp">
+          </div>
+          <div class="express">
+           <div class="text">
+            <h1>CAMP</h1>
+            <h2>Get expert training in coding, data, design, and digital marketing</h2>
+           </div>
+          </div>
         </div>
       </div>
-      <div class="grid-item">
-        <div class="svg-container">
-         <img src="/starter-code/assets/web-design/desktop/image-transfer.jpg" alt="transfer">
-        </div>
-        <div class="express">
-          <h1>TRANSFER</h1>
-          <h2>Site for low-cost money transfers and sending money within seconds</h2>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div class="svg-container">
-         <img src="/starter-code/assets/web-design/desktop/image-photon.jpg" alt="photon">
-        </div>
-        <div class="express">
-          <h1>PHOTON</h1>
-          <h2>A state-of-the-art music player with high-resolution audio and DSP effects</h2>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div class="svg-container">
-          <img src="/starter-code/assets/web-design/desktop/image-builder.jpg" alt="builder">
-        </div>
-        <div class="express">
-          <h1>BUILDER</h1>
-          <h2>Connects users with local contractors based on their location</h2>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div class="svg-container">
-          <img src="/starter-code/assets/web-design/desktop/image-blogr.jpg" alt="blogr">
-        </div>
-        <div class="express">
-          <h1>BLOGR</h1>
-          <h2>Blogr is a platform for creating an online blog or publication</h2>
-        </div>
-      </div>
-      <div class="grid-item">
-        <div class="svg-container">
-         <img src="/starter-code/assets/web-design/desktop/image-camp.jpg" alt="camp">
-        </div>
-        <div class="express">
-          <h1>CAMP</h1>
-          <h2>Get expert training in coding, data, design, and digital marketing</h2>
-        </div>
-      </div>
-       </div>
-   </section>
+    </section>
 
 
-   <section class="grid-container-container">
-    <div class="grid-content-container">
-      <div class="grid-item-container">
-       <div class="app">
-         <h3>App Design</h3>
-        <button>View Projects<span>></span></button>
+    <section class="grid-container-container">
+      <div class="grid-content-container">
+        <div class="grid-item-container">
+          <div class="app">
+            <h3>App Design</h3>
+            <button>View Projects<span>></span></button>
+          </div>
+        </div>
+        <div class="grid-item-container-container">
+          <div class="app">
+            <h3>Graphic Design</h3>
+            <button>View Projects<span>></span></button>
+          </div>
+        </div>
       </div>
-      </div>
-      <div class="grid-item-container-container">
-      <div class="app">
-        <h3>Graphic Design</h3>
-        <button>View Projects<span>></span></button>
-      </div>
-      </div>
-    </div>
-   </section>
-  
+    </section>
+
 
     <section class="project-container">
       <div class="gig">
-      <div class="project">
-       <h1>Let’s talk about your project</h1>
-       <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.
-       </h2>
+        <div class="project">
+          <h1>Let’s talk about your project</h1>
+          <h2>Ready to take it to the next level? Contact us today and find out how our expertise can help your business
+            grow.
+          </h2>
+        </div>
+        <button class="get-touch">GET IN TOUCH</button>
       </div>
-       <button class="get-touch">GET IN TOUCH</button>
-      </div>
-     </section>
+    </section>
 
     <footer>
       <section class="foot">
-       <nav >
-        <div class="logo">
-          <a href="http://"> <img src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
+        <nav>
+          <div class="logo">
+            <a href="http://"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
+          </div>
+          <div class="links link">
+            <a href="./index.html">OUR COMPANY</a>
+            <a href="./index.html">LOCATIONS</a>
+            <a href="./index.html">CONTACT</a>
+          </div>
+        </nav>
+        <hr>
+        <div class="container">
+          <div class="container-direction">
+            <h1>Designo Central Office</h1>
+            <h2> 3886 Wellington Street</h2>
+            <h2>Toronto, Ontario M9C 3J5</h2>
+          </div>
+          <div class="container-contact">
+            <h1>Contact Us (Central Office)</h1>
+            <h2>P : +1 253-863-8967</h2>
+            <h2>M : contact@designo.co</h2>
+          </div>
+
+          <div class="footer-icons">
+            <img src="/starter-code/assets/shared/desktop/icon-facebook.svg" alt="facebook">
+            <img src="/starter-code/assets/shared/desktop/icon-youtube.svg" alt="youtube">
+            <img src="/starter-code/assets/shared/desktop/icon-twitter.svg" alt="twitter">
+            <img src="/starter-code/assets/shared/desktop/icon-pinterest.svg" alt="pinterest">
+            <img src="/starter-code/assets/shared/desktop/icon-instagram.svg" alt="instagram">
+          </div>
         </div>
-        <div class="links link">
-          <a href="./index.html" >OUR COMPANY</a>
-          <a href="./index.html" >LOCATIONS</a>
-          <a href="./index.html" >CONTACT</a>
         </div>
-       </nav>
-       <hr>
-       <div class="container">
-        <div class="container-direction">
-          <h1>Designo Central Office</h1>
-          <h2> 3886 Wellington Street</h2>
-          <h2>Toronto, Ontario M9C 3J5</h2>
-        </div>
-        <div class="container-contact">
-          <h1>Contact Us (Central Office)</h1>
-          <h2>P : +1 253-863-8967</h2>
-          <h2>M : contact@designo.co</h2>
-        </div>
-     
-        <div class="footer-icons">
-          <img src="/starter-code/assets/shared/desktop/icon-facebook.svg" alt="facebook">
-          <img src="/starter-code/assets/shared/desktop/icon-youtube.svg" alt="youtube">
-          <img src="/starter-code/assets/shared/desktop/icon-twitter.svg" alt="twitter">
-          <img src="/starter-code/assets/shared/desktop/icon-pinterest.svg" alt="pinterest">
-          <img src="/starter-code/assets/shared/desktop/icon-instagram.svg" alt="instagram">
-        </div>
-       </div>
-      </div>
-    </section>
+      </section>
     </footer>
-   </main>
+  </main>
 </body>
 
 </html>
