Added some changes

--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -30,7 +30,13 @@
         <a href="./index.html" >LOCATIONS</a>
         <a href="./index.html" >CONATCT</a>
       </div>
+      <div class="menu-toggle">
+        <div class="hamburger">
+          <img src="../assets/shared/mobile/icon-hamburger.svg" alt="">
+        </div>
+      </div>
     </nav>
+    
     </header>
 
   <section class="Main-content">
@@ -75,7 +81,7 @@
        <a href="./index.html" >CONTACT</a>
      </div>
     </nav>
-    <hr>
+    <hr >
     <div class="container1">
      <div class="container-direction">
        <h1>Designo Central Office</h1>
