--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -124,13 +124,13 @@
         <div class="grid-item-container">
           <div class="app">
             <h3>App Design</h3>
-            <button>View Projects<span>></span></button>
+            <button>View Projects<span> <img src="/starter-code/assets/shared/desktop/icon-right-arrow.svg" alt="arrow"> </span></button>
           </div>
         </div>
         <div class="grid-item-container-container">
           <div class="app">
             <h3>Graphic Design</h3>
-            <button>View Projects<span>></span></button>
+            <button>View Projects<span><img src="/starter-code/assets/shared/desktop/icon-right-arrow.svg" alt="arrow"></span></button>
           </div>
         </div>
       </div>
