Made some changes

--- a/starter-code/html pages/graphic-design.html
+++ b/starter-code/html pages/graphic-design.html
@@ -82,7 +82,8 @@
      </div>
     </nav>
     <hr >
-    <div class="container1">
+    <d
+    /*-iv class="container1">
      <div class="container-direction">
        <h1>Designo Central Office</h1>
        <h2> 3886 Wellington Street</h2>
