Added mobile view footer

--- a/starter-code/html pages/index.html
+++ b/starter-code/html pages/index.html
@@ -48,14 +48,14 @@
         <div class="logo">
           <a href="http://"> <img src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
         </div>
-        <div class="links link">
+        <div class="links-link">
           <a href="./index.html" >OUR COMPANY</a>
           <a href="./index.html" >LOCATIONS</a>
           <a href="./index.html" >CONTACT</a>
         </div>
        </nav>
        <hr>
-       <div class="container">
+       <div class="container1">
         <div class="container-direction">
           <h1>Designo Central Office</h1>
           <h2> 3886 Wellington Street</h2>
