working on footer

--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -24,7 +24,7 @@
           <a href="./index.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo">
           </a>
         </div>
-        <div class="links">
+        <div class="link desk">
           <a href="./index.html">OUR COMPANY</a>
           <a href="./index.html">LOCATIONS</a>
           <a href="./index.html">CONATCT</a>
@@ -151,7 +151,9 @@
 
     <footer>
       <section class="foot">
+        <div class="foot-container">
         <nav>
+          <div class="contact">
           <div class="logo">
             <a href="http://"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
           </div>
@@ -160,6 +162,7 @@
             <a href="./index.html">LOCATIONS</a>
             <a href="./index.html">CONTACT</a>
           </div>
+        </div>
         </nav>
         <hr>
         <div class="container">
