--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -130,6 +130,19 @@
    <p> We are a group of enthusiastic folks who know how to put people first. Our success depends on our customers, and we strive to give them the best experience a company can provide.</p>
       </div>
    </div>
+  </div> 
+
+  <div class="bubbles">
+    <div class="first-bubble">
+      <img src="/starter-code/assets/shared/desktop/bg-pattern-small-circle.svg" alt="">
+    </div>
+    <div class="second-bubble">
+      <img src="/starter-code/assets/shared/desktop/bg-pattern-small-circle.svg" alt="">
+    </div>
+    <div class="third-bubble">
+      <img src="/starter-code/assets/shared/desktop/bg-pattern-small-circle.svg" alt="">
+    </div>
+     
   </div>
 
   <div class="side-leaf">
