--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -24,7 +24,7 @@
           <a href="./index.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo">
           </a>
         </div>
-        <div class="link desk">
+        <div class="link">
           <a href="./index.html">OUR COMPANY</a>
           <a href="./index.html">LOCATIONS</a>
           <a href="./index.html">CONATCT</a>
@@ -118,7 +118,6 @@
       </div>
     </section>
 
-
     <section class="grid-container-container">
       <div class="grid-content-container">
         <div class="grid-item-container">
@@ -135,7 +134,6 @@
         </div>
       </div>
     </section>
-
 
     <section class="project-container">
       <div class="gig">
@@ -157,7 +155,7 @@
           <div class="logo">
             <a href="http://"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
           </div>
-          <div class="links link">
+          <div class="links-link">
             <a href="./index.html">OUR COMPANY</a>
             <a href="./index.html">LOCATIONS</a>
             <a href="./index.html">CONTACT</a>
