--- a/starter-code/html pages/home.html
+++ b/starter-code/html pages/home.html
@@ -132,7 +132,7 @@
    </div>
   </div> 
 
-  <div class="bubbles">
+  <!-- <div class="bubbles">
     <div class="first-bubble">
       <img src="/starter-code/assets/shared/desktop/bg-pattern-small-circle.svg" alt="">
     </div>
@@ -143,7 +143,7 @@
       <img src="/starter-code/assets/shared/desktop/bg-pattern-small-circle.svg" alt="">
     </div>
      
-  </div>
+  </div> -->
 
   <div class="side-leaf">
     <img src="/starter-code/assets/shared/desktop/bg-pattern-leaf.svg" alt="leaf">
