--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -18,17 +18,23 @@
 
 <body>
   <main>
-    <header>
+    <header >
       <nav>
         <div class="logo">
           <a href="./index.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo">
           </a>
+        </div> 
+        <section class="mob-menu">
+        <img class="mob-open" src="/starter-code/assets/shared/mobile/icon-hamburger.svg" alt="open">
+        <div class="mob-wrapper close">
+          <img class="mob-close" src="/starter-code/assets/shared/mobile/icon-close.svg" alt="close">
         </div>
-        <div class="link">
-          <a href="./index.html">OUR COMPANY</a>
-          <a href="./index.html">LOCATIONS</a>
-          <a href="./index.html">CONATCT</a>
+        <div class="link menu-tab">
+          <a href="./index.html" class="mob-list-item">OUR COMPANY</a>
+          <a href="./index.html" class="mob-list-item">LOCATIONS</a>
+          <a href="./index.html" class="mob-list-item">CONATCT</a>
         </div>
+      </section>
       </nav>
     </header>
 
@@ -187,6 +193,7 @@
       </section>
     </footer>
   </main>
+  <script src="/starter-code/js/web_design.js"></script>
 </body>
 
 </html>
