update on mobile humbager

--- a/starter-code/html pages/index.html
+++ b/starter-code/html pages/index.html
@@ -23,11 +23,17 @@
       <div class="logo">
         <a href="./index.html" >  <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo"> </a>
       </div>
-      <div class="links">
-        <a href="./index.html" >OUR COMPANY</a>
-        <a href="./index.html" >LOCATIONS</a>
-        <a href="./index.html" >CONATCT</a>
-      </div>
+      <section class="mob-menu">
+        <img class="mob-open" src="/starter-code/assets/shared/mobile/icon-hamburger.svg" alt="open">
+        <div class="mob-wrapper close">
+          <img class="mob-close" src="/starter-code/assets/shared/mobile/icon-close.svg" alt="close">
+        </div>
+        <div class="link menu-tab">
+          <a href="./index.html" class="mob-list-item">OUR COMPANY</a>
+          <a href="./index.html" class="mob-list-item">LOCATIONS</a>
+          <a href="./index.html" class="mob-list-item">CONATCT</a>
+        </div>
+      </section>
     </nav>
     </header>
 
