--- a/starter-code/html pages/web-design.html
+++ b/starter-code/html pages/web-design.html
@@ -21,7 +21,7 @@
     <header >
       <nav>
         <div class="logo">
-          <a href="./index.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo">
+          <a href="./home.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 13.png" alt="logo">
           </a>
         </div> 
         <section class="mob-menu">
@@ -30,9 +30,9 @@
           <img class="mob-close" src="/starter-code/assets/shared/mobile/icon-close.svg" alt="close">
         </div>
         <div class="link menu-tab">
-          <a href="./index.html" class="mob-list-item">OUR COMPANY</a>
-          <a href="./index.html" class="mob-list-item">LOCATIONS</a>
-          <a href="./index.html" class="mob-list-item">CONATCT</a>
+          <a href="#" class="mob-list-item">OUR COMPANY</a>
+          <a href="#" class="mob-list-item">LOCATIONS</a>
+          <a href="#" class="mob-list-item">CONATCT</a>
         </div>
       </section>
       </nav>
@@ -159,12 +159,12 @@
         <nav>
           <div class="contact">
           <div class="logo">
-            <a href="http://"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
+            <a href="./web-design.html"> <img class="logo" src="/starter-code/assets/shared/desktop/Group 14.png" alt=""> </a>
           </div>
           <div class="links-link">
-            <a href="./index.html">OUR COMPANY</a>
-            <a href="./index.html">LOCATIONS</a>
-            <a href="./index.html">CONTACT</a>
+            <a href="#">OUR COMPANY</a>
+            <a href="#">LOCATIONS</a>
+            <a href="#">CONTACT</a>
           </div>
         </div>
         </nav>
