Working on mobile responsiveness

--- a/starter-code/html pages/app-design.html
+++ b/starter-code/html pages/app-design.html
@@ -92,7 +92,7 @@
               <img src="/starter-code/assets/shared/desktop/Group 14.png" alt="" />
             </a>
           </div>
-          <div class="links link">
+          <div class="links-link">
             <a href="./index.html">OUR COMPANY</a>
             <a href="./index.html">LOCATIONS</a>
             <a href="./index.html">CONTACT</a>
